--- a/style.css
+++ b/style.css
@@ -1,40 +1,129 @@
-.container {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  border: 2px solid grey;
-  margin: 48px 391px;
-  padding: 20px;
-  box-sizing: border-box;
-  width: 33%;
+body {
+    font-family: sans-serif;
+    margin-top: -33px;
 }
 
-#logo {}
+aside {
+    /* border: 1px solid black; */
+    border-right: 1px solid rgb(107, 213, 231) ;
+    display: inline-block;
+    margin-top: -108px;
+    background-color: rgb(240, 240, 245);
+}
 
-.input {
-  border: none;
-  border-bottom: 1px solid grey;
+header {
+    margin-left: 130px;
+    margin-top: 100px;
+}
+
+header li {
+    list-style: none;
+    float: left;
+    margin: 6px;
+
+    font-size: 13px;
+}
+
+.about-amazon{
+    border: 1px solid black;
+    width: 23%;
+    float: right;
+    margin-top: 115px;
+    padding-left: 10px;
+}
+
+div.head1 {
+    margin-left: 10px;
 
 }
 
-.username {
-  border: none;
-  border-bottom: 2px solid blue;
-  width: 100%;
+div.head2 {
+    /* border: 2px solid; */
+    margin-left: 665px;
+    width: auto;
 }
 
-.password {
-  border: none;
-  border-bottom: 1px solid grey;
+
+.aside-div1 {
+    list-style: none;
+    margin-top: 35px;
+    margin-left: -25px;
+    font-size: 12px;
+
 }
 
-#button{
-  text-decoration: none;
-  color: white;
-  background-color: rgb(68, 110, 226);
-  /* margin: 0px 40px; */
-  float: right;
-  border: 4px solid rgb(26, 126, 187);
-  
+.aside-div1 a {
+    color: rgb(17, 78, 170);
+    text-decoration: none;
 }
-#button:hover{
-cursor: pointer;
+
+.aside-div2 {
+    list-style: none;
+    margin-top: 35px;
+    margin-left: -25px;
+    font-size: 12px;
+
+}
+.aside-div2 a {
+    color: rgb(17, 78, 170);
+    text-decoration: none;
+}
+
+.aside-div3 {
+    list-style: none;
+    margin-top: 35px;
+    margin-left: -25px;
+    font-size: 12px;
+
+}
+
+.aside-div3 a {
+    color: rgb(17, 78, 170);
+    text-decoration: none;
+}
+
+.Aside{
+    display: inline-block;
+    width: 25%;
+    float: right;
+    margin-top: 10px;
+    padding-left: 10px;
+}
+.img#amazonLogo{
+    padding-left: 10px;
+}
+aside.Aside p{
+    padding-left: 93px;
+}
+.middle{
+    margin-left: 160px;
+    margin-top: -711px;
+    padding-left: 30px;
+    width: 60%;
+    /* border: 1px solid blue; */
+    
+}
+.middle-div{
+    font-size: smaller;
+}
+.middle-div a{
+    color: rgb(17, 78, 170);
+    text-decoration: none;
+}
+
+.contents{
+   margin-left: 190px;
+   margin-top: 12px;
+   border: 1px solid grey;
+   width: 16%;
+   background-color: rgb(240, 240, 245);
+   font-size: 14px;
+   line-height: 22px;
+
+}
+.contents a{
+    color: rgb(17, 78, 170);
+    text-decoration: none;
+   
+    
 }
